/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 John Peachey
 */

@startuml
'https://plantuml.com/class-diagram


App o-- NameStorage
App o-- FileCentral


class App {
    Map <int, string> input
}

class FileCentral{
    inputFileGetter()
    outputFileCreator()
    fileReader()
}

class NameStorage {
    arrayMaker()
    listSorter()
}

@enduml